syntax = "proto3";

package ai.stigmer.agentic.agentexecution.v1;

import "ai/stigmer/agentic/executioncontext/v1/spec.proto";
import "buf/validate/validate.proto";

// AgentExecutionSpec contains only user-provided inputs for triggering an execution.
// All execution results and state live in AgentExecutionStatus (in api.proto).
message AgentExecutionSpec {
  // Session ID this execution belongs to (optional).
  // If not provided, agent_id must be specified - a session will be auto-created
  // using the agent's default instance.
  // Either session_id or agent_id must be provided (enforced in handler).
  string session_id = 1;

  // Agent ID (optional).
  // If session_id is not provided, agent_id must be specified.
  // When provided without session_id, a new session is auto-created using
  // the agent's default instance ID.
  // Either session_id or agent_id must be provided (enforced in handler).
  string agent_id = 2;

  // User input message that triggers this execution.
  // Each execution represents one user message and the agent's response.
  string message = 3 [(buf.validate.field).string.min_len = 1];

  // Optional execution-time configuration overrides.
  // Example: Specify the model to use for this execution.
  ExecutionConfig execution_config = 4;

  // Runtime environment variables and secrets (execution-scoped).
  // These values are only available for this specific execution.
  // Use case: B2B integrations where secrets are injected at runtime (e.g., Plant & Cloud).
  // These values are stored in ExecutionContext and deleted when execution completes.
  // Merge priority: Agent defaults < Environment < runtime_env (highest)
  map<string, ai.stigmer.agentic.executioncontext.v1.ExecutionValue> runtime_env = 5;

  // ============================================================================
  // Temporal Async Activity Completion Token (Token Handshake Pattern)
  // ============================================================================

  // Temporal task token for async activity completion (optional).
  //
  // **Purpose**: Enables async activity completion pattern where the caller
  // (typically a Zigflow workflow activity) waits for actual agent completion
  // without blocking worker threads.
  //
  // **Flow**:
  // 1. Caller (Go Temporal activity) extracts its task token
  // 2. Passes token in this field when creating AgentExecution
  // 3. Returns activity.ErrResultPending (activity paused, thread released)
  // 4. Agent workflow completes (minutes/hours later)
  // 5. Agent workflow calls ActivityCompletionClient.complete(token, result)
  // 6. Temporal resumes the paused activity with the result
  //
  // **Benefits**:
  // - Correctness: Caller waits for actual completion, not just ACK
  // - Scalability: Worker threads not blocked during long-running execution
  // - Resilience: Token is durable in Temporal; survives restarts
  // - Decoupling: Caller doesn't poll or manage agent lifecycle
  //
  // **When Empty**:
  // - Empty/null = fire-and-forget or direct API call (backward compatible)
  // - Agent execution proceeds normally, no callback performed
  // - Use case: CLI commands, API requests, non-workflow triggers
  //
  // **When Provided**:
  // - Agent workflow MUST complete the external activity using this token
  // - Both success and failure paths must call completion
  // - Token uniquely identifies the external activity execution
  //
  // **Token Format**:
  // - Opaque binary blob from Temporal SDK (typically 100-200 bytes)
  // - Contains: namespace, workflow ID, run ID, activity ID, attempt
  // - DO NOT parse or modify - treat as opaque handle
  //
  // **Security**:
  // - Token grants ability to complete the activity (bearer token)
  // - Should only be passed through trusted internal services
  // - Logged as Base64-encoded string (truncated for security)
  //
  // **Timeout**:
  // - Caller should set StartToCloseTimeout (e.g., 24 hours)
  // - If token callback never arrives, activity times out
  // - Prevents infinite hangs if agent workflow crashes
  //
  // **Observability**:
  // - Token is logged at creation time (Base64, first 20 chars)
  // - Activity appears as "Running" in Temporal UI until completed
  // - Both caller workflow and agent workflow visible in Temporal
  //
  // **Example Usage (Go)**:
  // ```go
  // // In Zigflow workflow activity
  // func CallAgentActivity(ctx context.Context, config *AgentCallTaskConfig) {
  //     // Extract task token
  //     taskToken := activity.GetInfo(ctx).TaskToken
  //
  //     // Create agent execution with token
  //     execution := &AgentExecution{
  //         Spec: &AgentExecutionSpec{
  //             AgentId: config.Agent,
  //             Message: config.Message,
  //             CallbackToken: taskToken,  // ðŸ‘ˆ Pass token here
  //         },
  //     }
  //
  //     client.Create(ctx, execution)
  //
  //     // Return pending - activity paused, thread released
  //     return nil, activity.ErrResultPending
  // }
  // ```
  //
  // **Example Usage (Java Completion)**:
  // ```java
  // // In agent workflow (after completion)
  // if (spec.getCallbackToken() != null && !spec.getCallbackToken().isEmpty()) {
  //     // Complete the external activity
  //     systemActivities.completeZigflowToken(
  //         spec.getCallbackToken(),
  //         result
  //     );
  // }
  // ```
  //
  // **References**:
  // - ADR: docs/adr/20260122-async-agent-execution-temporal-token-handshake.md
  // - Temporal Docs: https://docs.temporal.io/activities#asynchronous-activity-completion
  // - Go SDK: https://pkg.go.dev/go.temporal.io/sdk/activity#ErrResultPending
  // - Java SDK: https://www.javadoc.io/doc/io.temporal/temporal-sdk/latest/io/temporal/client/ActivityCompletionClient.html
  //
  // @since 2026-01-22 (Phase 2: Async Agent Execution Integration)
  bytes callback_token = 6;
}

// Configuration that can be applied at execution time.
message ExecutionConfig {
  // The model to use for this execution.
  // Example: "claude-sonnet-4-20250514"
  string model_name = 1;

  // Additional configuration options can be added here.
  // Examples: temperature, max_tokens, top_p, etc.
}
